# dnscrypt-proxy

./: .travis.yml  configure.ac
src/: Makefile.am
src/wrapper/: Makefile.am  gen-version.sh
src/wrapper/tests/: run_tests.sh
